--- a/css/main.css
+++ b/css/main.css
@@ -229,38 +229,37 @@ body {
   color: #ffb42a;
 }
 
-#logo {
+/*#logo {
   width: 120px;
   height: 19px;
-}
+  & .cls-3 {
+    stroke: $logoBg;
+    stroke-width: 2px;
+    fill: none;
+  }
 
-#logo .cls-3 {
-  stroke: #ffa81f;
-  stroke-width: 2px;
-  fill: none;
-}
+  & .cls-4 {
+    stroke: $logoFg;
+    stroke-width: 2px;
+    fill: none;
+  }
 
-#logo .cls-4 {
-  stroke: #4992b2;
-  stroke-width: 2px;
-  fill: none;
-}
+  & .cls-5 {
+    fill: $logoBg;
+    fill: $logoSvgGradient;
+  }
 
-#logo .cls-5 {
-  fill: #ffa81f;
-  fill: url("../#linear-gradient-logo");
-}
+  & .cls-6 {
+    font-size: 25px;
+  }
 
-#logo .cls-6 {
-  font-size: 25px;
-}
-
-#logo .cls-7 {
-  fill: #ffffff;
-  font-size: 25px;
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-}
+  & .cls-7 {
+    fill: $LogoText;
+    font-size: 25px;
+    font-family: $fontRoboto;
+    text-transform: uppercase;
+  }
+}*/
 
 #phone {
   width: 21px;
@@ -309,82 +308,79 @@ body {
   fill: #499fcb;
 }
 
+/*
 #circle-slider-01 {
-  width: 424px;
-  height: 428px;
-}
-
-#circle-slider-01 .cls-2 {
-  stroke: url("../#linear-gradient-slider-1");
-  stroke-width: 20px;
-  fill: none;
+  width:  424px;
+  height: 428px;  
+  & .cls-2 {
+        stroke: $sliderSvgGradient1;
+        stroke-width: 20px;
+        fill: none;
+      }
 }
 
 #circle-slider-02 {
-  width: 49px;
-  height: 140px;
+  width:  49px;
+  height: 140px;  
+  & .cls-2 {
+        stroke: $sliderSvgGradient2;
+        stroke-width: 30px;
+        fill: none;
+      }
 }
 
-#circle-slider-02 .cls-2 {
-  stroke: url("../#linear-gradient-slider-2");
-  stroke-width: 30px;
-  fill: none;
-}
 
 #circle-collection-01 {
-  width: 362px;
-  height: 362px;
-}
-
-#circle-collection-01 .cls-2 {
-  stroke: url("../#linear-gradient-collection-1");
-  stroke-width: 20px;
-  fill: none;
+  width:  362px;
+  height: 362px;  
+  & .cls-2 {
+        stroke: $collectionSvgGradient1;
+        stroke-width: 20px;
+        fill: none;
+      }
 }
 
 #circle-collection-02 {
-  width: 317px;
-  height: 362px;
-}
-
-#circle-collection-02 .cls-2 {
-  stroke: url("../#linear-gradient-collection-2");
-  stroke-width: 20px;
-  fill: none;
+  width:  317px;
+  height: 362px;  
+  & .cls-2 {
+        stroke: $collectionSvgGradient2;
+        stroke-width: 20px;
+        fill: none;
+      }
 }
 
 #circle-collection-03 {
-  width: 448px;
-  height: 448px;
-}
-
-#circle-collection-03 .cls-2 {
-  stroke: url("../#linear-gradient-collection-3");
-  stroke-width: 20px;
-  fill: none;
+  width:  448px;
+  height: 448px;  
+  & .cls-2 {
+        stroke: $collectionSvgGradient3;
+        stroke-width: 20px;
+        fill: none;
+      }
 }
 
 #circle-blog-01 {
-  width: 124px;
-  height: 362px;
+  width:  124px;
+  height: 362px;  
+  & .cls-2 {
+        stroke: $blogSvgGradient1;
+        stroke-width: 20px;
+        fill: none;
+      }
 }
 
-#circle-blog-01 .cls-2 {
-  stroke: url("../#linear-gradient-blog-1");
-  stroke-width: 20px;
-  fill: none;
-}
 
 #circle-blog-02 {
-  width: 252px;
-  height: 379px;
+  width:  252px;
+  height: 379px;  
+  & .cls-2 {
+        stroke: $blogSvgGradient2;
+        stroke-width: 40px;
+        fill: none;
+      }
 }
-
-#circle-blog-02 .cls-2 {
-  stroke: url("../#linear-gradient-blog-2");
-  stroke-width: 40px;
-  fill: none;
-}
+*/
 
 header {
   background: rgba(255, 255, 255, 0.5);
@@ -578,6 +574,13 @@ header .hamburger.active span:after {
   text-transform: uppercase;
   text-align: left;
   margin: 92px 0 0;
+  overflow: auto;
+}
+
+@media all and (max-width: 768px) {
+  .slider-info h2 {
+    font-size: 50px;
+  }
 }
 
 .slider-info div.text {
@@ -640,6 +643,12 @@ header .hamburger.active span:after {
 
 .slider-info .arrow--prev {
   left: -110px;
+}
+
+@media all and (max-width: 768px) {
+  .slider-info .s01-slider {
+    height: auto;
+  }
 }
 
 @media all and (max-width: 1170px) {
@@ -709,6 +718,12 @@ header .hamburger.active span:after {
   left: 205px;
   bottom: 6px;
   z-index: 3;
+}
+
+@media all and (max-width: 1000px) {
+  .slider-info .slick-slider .slick-dots {
+    position: static;
+  }
 }
 
 .slider-info .img {
